Reviews in a ListView added
The user can read the reviews now. But the app always crashes because
the API request exceeds the frequency permitted.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
 
     <string name="textview_text_row_list">Movie Trailer 1</string>
     <string name="imageview_description_row_list">Movie Trailer Play Button Image</string>
+
+    <string name="favorite_star_button_description">The favorite star button</string>
 </resources>
