--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <string name="sort_popularity_desc_text">Popularity</string>
     <string name="sort_highest_rating_desc_text">Highest Rating</string>
-    <string name="show_favorite_movies">Favorite</string>
+    <string name="favorite">Favorite</string>
+    <string name="favorite_movie_alert">Please have at least one favorite movie.</string>
+    <string name="network_unavailable">Network Unavailable</string>
 
     <string name="textview_text_mainactivity">Movies</string>
 
